<resources>
    <string name="app_name">ShoeStore</string>
    <string name="about">About</string>
    <!-- Login Fragment -->
    <string name="login_title">Login</string>
    <string name="username_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="create_text">Create</string>
    <string name="validate_text">Please enter an email AND password before clicking Login/Create.</string>
    <!-- Welcome Fragment -->
    <string name="welcome_title">Welcome</string>
    <string name="welcome_text">Welcome,</string>
    <string name="welcome_back_text">Welcome \nback,</string>
    <string name="name_text">%1$s!!!</string>
    <!-- Instructions Fragment -->
    <string name="instructions_title">Instructions</string>
    <string name="how_to_text">How to:</string>
    <string name="instructions_description">When on the \'Shoe List\' screen, press the \'+\' button on the bottom right of the screen to add a new shoe. When the button is clicked, you will be directed to a \'Shoe Details\' screen where you can add shoe information and either save, to be added to the \'Shoe List\' screen, or cancel. You may log out from the \'Shoe List\' screen as well. </string>
    <!-- Shoe List Fragment -->
    <string name="shoe_list_title">Shoe List</string>
    <string name="shoe_list_text">Shoe List</string>
    <!-- Shoe Detail Fragment -->
    <string name="shoe_detail_title">Shoe Details</string>
    <string name="shoe_name_text">Name</string>
    <string name="shoe_company_text">Company</string>
    <string name="shoe_size_text">Size</string>
    <string name="shoe_description_text">Description</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="logout_menu">Log Out</string>


</resources>
