<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I also chose LinearLayout here as this is a simple layout with only 3 Views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="32dp"
        tools:context=".InstructionsFragment">

        <TextView
            android:id="@+id/howToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_text"
            android:textSize="32dp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_description"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/shoeListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_list_text"
            />

    </LinearLayout>


</layout>
