<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I also chose LinearLayout here as this is a simple layout with only 3 Views -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/instructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title"
            android:layout_marginTop="24dp"/>

    </LinearLayout>


</layout>

