<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="shoeListViewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
    </data>

    <!-- I also chose ConstraintLayout here as this layout is a bit more complex and I wanted to be able to align the views easily -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".ShoeDetailFragment">

        <TextView
            android:id="@+id/shoeNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_name_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeNameEditText"
            app:layout_constraintEnd_toStartOf="@+id/shoeNameEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoeCompanyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_company_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeCompanyEditText"
            app:layout_constraintEnd_toStartOf="@+id/shoeCompanyEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeCompanyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeNameEditText" />

        <TextView
            android:id="@+id/shoeSizeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_size_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeSizeEditText"
            app:layout_constraintEnd_toStartOf="@+id/shoeSizeEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeSizeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:text="@={`` + shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeCompanyEditText" />

        <TextView
            android:id="@+id/shoeDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_description_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeDescriptionEditText"
            app:layout_constraintEnd_toStartOf="@+id/shoeDescriptionEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoeDescriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeSizeEditText" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> shoeListViewModel.addShoeToShoeList()}"
            android:text="@string/save_button_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/saveButton"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescriptionEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>